docs: Clean up redundant documentation (42 → 11 docs) + complete index migration
Index Migration (index=fortigate_security → index=fw):
- Update configs/fortigate-syslog.conf (5 references)
- Update configs/fortianalyzer-hec-direct.conf (8 references + legacy notice)
- Update configs/fortigate-hec-setup.conf (4 references + legacy notice)
- Update CLAUDE.md to reflect migration completion

Documentation Cleanup (74% reduction):
- Archive 31 redundant documents to archive-20251024/docs-cleanup/
  • Phase optimization reports (7 files)
  • Validation reports (5 files)
  • Migration docs (3 files)
  • Redundant guides (16 files)
- Retain 11 essential technical guides
- Move README-REACT.md to docs/
- Move test SPL file to tests/
- Create DOCUMENTATION_CLEANUP_SUMMARY.md

Philosophy: Following documentation minimization principles
Impact: No breaking changes, all info preserved in archive

--- a/configs/fortianalyzer-hec-direct.conf
+++ b/configs/fortianalyzer-hec-direct.conf
@@ -1,8 +1,12 @@
 ###############################################################################
 # FortiAnalyzer → Splunk HEC Direct Integration (Advanced)
 #
-# FortiAnalyzer Splunk Connector를 사용하여 직접 HEC로 로그 전송
-# FortiGate → FortiAnalyzer → Splunk HEC (REST API)
+# ⚠️  LEGACY CONFIGURATION - For Reference Only
+# Current production setup uses Syslog → Splunk (index=fw)
+# See: configs/fortigate-syslog.conf + configs/inputs.conf
+#
+# This file describes HEC-based ingestion (FortiAnalyzer required)
+# FortiGate → FortiAnalyzer → Splunk HEC (REST API) → index=fw
 ###############################################################################
 
 ###############################################################################
@@ -155,7 +159,7 @@ config system log-fetch client-profile
         set host-field devname                  # Use device name as host
 
         # Indexing
-        set index "fortigate_security"          # Default Splunk index
+        set index "fw"                          # Default Splunk index
 
         # SSL/TLS
         set ssl-min-proto-version tls1-2        # TLS 1.2 minimum
@@ -178,7 +182,7 @@ end
 #   "host": "FGT-MAIN-01",
 #   "source": "fortianalyzer",
 #   "sourcetype": "fortianalyzer:traffic",
-#   "index": "fortigate_security",
+#   "index": "fw",
 #   "event": {
 #     "devname": "FGT-MAIN-01",
 #     "devid": "FG100F12345678",
@@ -262,7 +266,7 @@ end
 
 # Problem: Logs Not Appearing in Splunk
 # Solution:
-#   1. Check index exists: | metadata type=sources index=fortigate_security
+#   1. Check index exists: | metadata type=sources index=fw
 #   2. Verify HEC endpoint health: curl https://SPLUNK:8088/services/collector/health
 #   3. Check FortiAnalyzer upload logs: diagnose log-fetch upload-log list
 
@@ -284,12 +288,12 @@ end
 # ✓ Enable SSL: Yes
 # ✓ HTTP Port Number: 8088
 # ✓ Default Source: fortianalyzer
-# ✓ Default Index: fortigate_security
+# ✓ Default Index: fw
 #
 # New Token:
 # Name: fortianalyzer-hec
 # Source type: fortianalyzer:traffic (or _json for auto-detection)
-# Index: fortigate_security
+# Index: fw
 # Advanced:
 #   ✓ Use ACK: Enabled (for reliable delivery)
 #   ✓ Enable Indexer Acknowledgment
@@ -308,7 +312,7 @@ curl -k https://YOUR_SPLUNK_HEC_HOST:8088/services/collector/event \
     "host": "fortianalyzer-test",
     "source": "manual-test",
     "sourcetype": "fortianalyzer:traffic",
-    "index": "fortigate_security",
+    "index": "fw",
     "event": {
       "message": "FortiAnalyzer HEC Integration Test",
       "severity": "information",
@@ -320,7 +324,7 @@ curl -k https://YOUR_SPLUNK_HEC_HOST:8088/services/collector/event \
 # {"text":"Success","code":0}
 
 # Check in Splunk:
-# index=fortigate_security sourcetype=fortianalyzer:traffic test=true
+# index=fw sourcetype=fortianalyzer:traffic test=true
 
 
 ###############################################################################
@@ -385,5 +389,5 @@ curl -k https://YOUR_SPLUNK_HEC_HOST:8088/services/collector/event \
 # After applying this config:
 # 1. Verify HEC connection: diagnose test application fazd 1
 # 2. Monitor upload queue: diagnose log-fetch queue status
-# 3. Check Splunk: index=fortigate_security | stats count by sourcetype
+# 3. Check Splunk: index=fw | stats count by sourcetype
 
