--- a/configs/fortigate-hec-setup.conf
+++ b/configs/fortigate-hec-setup.conf
@@ -1,6 +1,10 @@
 ###############################################################################
 # FortiGate to Splunk HEC Integration Configuration
 #
+# ⚠️  LEGACY CONFIGURATION - For Reference Only
+# Current production setup uses Syslog → Splunk (index=fw)
+# See: configs/fortigate-syslog.conf for current production method
+#
 # 이 파일은 FortiGate 방화벽에서 Splunk HEC로 로그를 전송하는 설정입니다.
 #
 # 적용 방법:
@@ -202,7 +206,7 @@ execute log display
 #
 # Token Name: fortigate-hec
 # Source type: fortigate:traffic
-# Index: fortigate_security
+# Index: fw
 #
 # 생성 후 Token 값 복사:
 # Token: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
@@ -222,7 +226,7 @@ curl -k https://YOUR_SPLUNK_HEC_HOST:8088/services/collector/event \
   -d '{
     "event": "FortiGate Test Event",
     "sourcetype": "fortigate:traffic",
-    "index": "fortigate_security",
+    "index": "fw",
     "source": "fortigate-test",
     "host": "fortigate-fw01"
   }'
@@ -268,7 +272,7 @@ curl -k https://YOUR_SPLUNK_HEC_HOST:8088/services/collector/event \
 
 # 문제: 로그가 Splunk에 안 보임
 # 해결:
-#   1. Splunk에서 인덱스 확인: index=fortigate_security
+#   1. Splunk에서 인덱스 확인: index=fw
 #   2. HEC 상태 확인: https://YOUR_SPLUNK_HEC_HOST:8088/services/collector/health
 #   3. FortiGate 로그 필터 확인: get log syslogd filter
 
@@ -334,5 +338,5 @@ curl -k https://YOUR_SPLUNK_HEC_HOST:8088/services/collector/event \
 # ✅ Splunk 대시보드에서 실시간 모니터링
 
 # 설정 완료 후 Splunk에서 확인:
-# index=fortigate_security | head 100
+# index=fw | head 100
 
