--- a/configs/fortigate-syslog.conf
+++ b/configs/fortigate-syslog.conf
@@ -12,7 +12,7 @@
 # 1. Splunk Universal Forwarder installed on syslog server
 # 2. Network connectivity: FortiGate → Syslog Server (Port 514)
 # 3. Firewall rules allow UDP/TCP 514
-# 4. Splunk fortigate_security index created
+# 4. Splunk fw index created
 
 
 ###############################################################################
@@ -244,12 +244,12 @@ end
 # [udp://514]
 # connection_host = ip
 # sourcetype = fortigate:traffic
-# index = fortigate_security
+# index = fw
 #
 # [tcp://514]
 # connection_host = ip
 # sourcetype = fortigate:traffic
-# index = fortigate_security
+# index = fw
 
 # Configure Forward to Splunk (outputs.conf):
 # [tcpout]
@@ -325,7 +325,7 @@ diagnose log stats
 # Solution:
 #   1. Check Splunk UF is running: /opt/splunkforwarder/bin/splunk status
 #   2. Verify inputs.conf has UDP/TCP 514 configured
-#   3. Check Splunk index: index=fortigate_security | head 100
+#   3. Check Splunk index: index=fw | head 100
 #   4. Review Splunk UF logs: tail -f /opt/splunkforwarder/var/log/splunk/splunkd.log
 
 # Problem: Log Format Parsing Issues
@@ -433,5 +433,5 @@ end
 # After applying this config:
 # 1. Verify syslog: diagnose test application syslogd 1
 # 2. Check Splunk UF: /opt/splunkforwarder/bin/splunk list forward-server
-# 3. Search in Splunk: index=fortigate_security | head 100
+# 3. Search in Splunk: index=fw | head 100
 
