--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "faz-splunk-hec-integration",
-  "version": "1.0.0",
+  "name": "faz-splunk-react-dashboard",
+  "version": "2.0.0",
   "type": "module",
   "private": true,
-  "description": "FortiAnalyzer → Splunk HEC Integration with Slack Alerts",
-  "main": "index.js",
+  "description": "FortiAnalyzer-Splunk React Dashboard with Real-time Event Streaming",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node backend/server.js",
+    "start:legacy": "node index.js",
+    "dev": "npm start",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build:frontend": "cd frontend && npm run build",
     "dev:worker": "wrangler dev",
     "deploy:worker": "wrangler publish",
     "tail:worker": "wrangler tail",
