fix: Change real-time search window from rt-rt to rt-1m-rt
- Changed dispatch.earliest_time from 'rt' to 'rt-1m' across all 6 alerts
- Creates proper 1-minute sliding window instead of point-in-time search
- Affected alerts: Config_Change, Interface_Status, HA_Status, Device_Events, System_Resource, Admin_Activity
- Updated documentation section to reflect rt-1m configuration

Real-time searches need a time window (rt-1m to rt) to capture events
that occurred in the last minute, not just at the exact instant.

--- a/configs/savedsearches-fortigate-alerts-logid-based.conf
+++ b/configs/savedsearches-fortigate-alerts-logid-based.conf
@@ -54,7 +54,7 @@ disabled = 0
 
 # Real-time settings
 cron_schedule = * * * * *
-dispatch.earliest_time = rt
+dispatch.earliest_time = rt-1m
 dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
@@ -152,7 +152,7 @@ disabled = 0
 
 # Real-time settings
 cron_schedule = * * * * *
-dispatch.earliest_time = rt
+dispatch.earliest_time = rt-1m
 dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
@@ -233,7 +233,7 @@ disabled = 0
 
 # Real-time settings
 cron_schedule = * * * * *
-dispatch.earliest_time = rt
+dispatch.earliest_time = rt-1m
 dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
@@ -321,7 +321,7 @@ disabled = 0
 
 # Real-time settings
 cron_schedule = * * * * *
-dispatch.earliest_time = rt
+dispatch.earliest_time = rt-1m
 dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
@@ -410,7 +410,7 @@ disabled = 0
 
 # Real-time settings
 cron_schedule = * * * * *
-dispatch.earliest_time = rt
+dispatch.earliest_time = rt-1m
 dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
@@ -501,7 +501,7 @@ disabled = 0
 
 # Real-time settings
 cron_schedule = * * * * *
-dispatch.earliest_time = rt
+dispatch.earliest_time = rt-1m
 dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
@@ -632,8 +632,8 @@ search = index=fw type=event subtype=system \
 #
 # 8️⃣ Real-time Schedule Explained:
 #    cron_schedule = * * * * *        → Every minute
-#    dispatch.earliest_time = rt      → Real-time search (immediate)
-#    dispatch.latest_time = rt        → Real-time search window
+#    dispatch.earliest_time = rt-1m   → Real-time search (1-minute sliding window)
+#    dispatch.latest_time = rt        → Real-time search window (now)
 #    realtime_schedule = 1            → Enable real-time execution
 #
 # 9️⃣ Suppression Strategy:
