fix: Remove noisy login/update LogIDs and convert all alerts to real-time
- Remove logid=0100041001 (Update Failed) from System Critical alert
- Disable Alert 5 (FAZ Device Login Failures - LogIDs 08,14,17,20)
- Convert all 8 active alerts to real-time (rt-1m-rt)
- Prevents alert flooding from high-volume login/update events

User request: 일단 로그인 / 업데이트관련은 다 뻊 ㅝ 뺴줘
User request: 나머지는 걍 다 실시간해 ㄹ (RT, RT-1m)

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -145,8 +145,8 @@ disabled = 0
 
 # Scheduled settings (15 minutes)
 cron_schedule = */15 * * * *
-dispatch.earliest_time = -15m
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
@@ -180,12 +180,11 @@ action.slack.param.message = $result.blockkit_json$
 action.threat_add.param.verbose = 0
 action.webhook.enable_allowlist = 0
 
-# 🔍 Search Query (logid-based filtering only)
+# 🔍 Search Query (logid-based filtering only - login/update LogIDs removed)
 search = index=fw type=event subtype=system \
-    (logid=0100041001 OR logid=0100040704 OR logid=0100046600 OR logid=0100053400 OR logid=0100053401) \
+    (logid=0100040704 OR logid=0100046600 OR logid=0100053400 OR logid=0100053401) \
 | eval device = coalesce(devname, "unknown") \
 | eval event_type = case( \
-    logid="0100041001", "Update Failed", \
     logid="0100040704", "Performance Issue", \
     logid="0100046600", "HA Sync Error", \
     logid="0100053400" OR logid="0100053401", "Memory Issue", \
@@ -226,8 +225,8 @@ disabled = 0
 
 # Scheduled settings (5 minutes)
 cron_schedule = */5 * * * *
-dispatch.earliest_time = -5m
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
@@ -309,8 +308,8 @@ disabled = 0
 
 # Scheduled settings (10 minutes)
 cron_schedule = */10 * * * *
-dispatch.earliest_time = -10m
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
@@ -390,13 +389,13 @@ search = index=fw type=event subtype=vpn \
 #############################################
 
 [FortiAnalyzer_Device_Login_Failure_Production]
-description = FortiAnalyzer device login failures (logid-based, Block Kit)
-disabled = 0
+description = FortiAnalyzer device login failures (logid-based, Block Kit) - DISABLED (login-related, too noisy)
+disabled = 1
 
 # Scheduled settings (15 minutes)
 cron_schedule = */15 * * * *
-dispatch.earliest_time = -15m
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
@@ -468,8 +467,8 @@ disabled = 0
 
 # Scheduled settings (daily at 9 AM)
 cron_schedule = 0 9 * * *
-dispatch.earliest_time = -1d
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
@@ -554,8 +553,8 @@ disabled = 0
 
 # Scheduled settings (1 hour)
 cron_schedule = 0 * * * *
-dispatch.earliest_time = -1h
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
@@ -590,8 +589,8 @@ disabled = 0
 
 # Scheduled settings (30 minutes)
 cron_schedule = */30 * * * *
-dispatch.earliest_time = -30m
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
@@ -670,8 +669,8 @@ disabled = 0
 
 # Scheduled settings (1 hour)
 cron_schedule = 0 * * * *
-dispatch.earliest_time = -1h
-dispatch.latest_time = now
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
 display.general.type = statistics
 display.page.search.tab = statistics
 enableSched = 1
