fix: Remove '_Production' suffix from all alert names
- Cleaned alert naming: 001.[alert]FortiGate_Config_Change
- Removed redundant '_Production' suffix for cleaner UI
- All 10 alerts renamed consistently
- Format: NNN.[alert]AlertName

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -38,7 +38,7 @@
 # Real-time monitoring with 30s deduplication
 #############################################
 
-[001.[alert]FortiGate_Config_Change_Production]
+[001.[alert]FortiGate_Config_Change]
 description = Real-time FortiGate configuration change alerts (logid-based, Block Kit)
 disabled = 0
 
@@ -140,7 +140,7 @@ search = index=fw type=event subtype=system \
 # Real-time monitoring (every minute)
 #############################################
 
-[002.[alert]FortiGate_System_Critical_Production]
+[002.[alert]FortiGate_System_Critical]
 description = Real-time FortiGate system critical events (logid-based, Block Kit)
 disabled = 0
 
@@ -220,7 +220,7 @@ search = index=fw type=event subtype=system \
 # Real-time monitoring (every minute)
 #############################################
 
-[003.[alert]FortiGate_Traffic_Anomaly_Production]
+[003.[alert]FortiGate_Traffic_Anomaly]
 description = Traffic anomaly detection based on production LogIDs (logid-based, Block Kit)
 disabled = 0
 
@@ -304,7 +304,7 @@ search = index=fw type=traffic \
 # Real-time monitoring (every minute)
 #############################################
 
-[004.[alert]FortiGate_VPN_Failure_Production]
+[004.[alert]FortiGate_VPN_Failure]
 description = Real-time VPN connection failures and auth errors (logid-based, Block Kit)
 disabled = 0
 
@@ -390,7 +390,7 @@ search = index=fw type=event subtype=vpn \
 # Device ".self" indicates FortiAnalyzer's own events
 #############################################
 
-[005.[alert]FortiAnalyzer_Device_Login_Failure_Production]
+[005.[alert]FortiAnalyzer_Device_Login_Failure]
 description = FortiAnalyzer device login failures (DISABLED - not critical)
 disabled = 1
 
@@ -427,7 +427,7 @@ search = index=fw subtype=fazsys devname=".self" \
 # Daily summary at 9 AM KST
 #############################################
 
-[006.[alert]FortiGate_Security_Rating_Low_Production]
+[006.[alert]FortiGate_Security_Rating_Low]
 description = FortiGate security rating summary (daily, no alerts)
 disabled = 0
 
@@ -469,7 +469,7 @@ search = index=fw subtype=security-rating \
 # Informational only, no Slack alerts
 #############################################
 
-[007.[alert]FortiGate_User_Activity_Production]
+[007.[alert]FortiGate_User_Activity]
 description = User activity monitoring (logid-based, summary only)
 disabled = 1  # ❌ DISABLED: User activity not critical
 
@@ -506,7 +506,7 @@ search = index=fw subtype=user logid=0102038012 \
 # Real-time monitoring (every minute)
 #############################################
 
-[008.[alert]FortiAnalyzer_LogDev_Warning_Production]
+[008.[alert]FortiAnalyzer_LogDev_Warning]
 description = FortiAnalyzer log device warnings (logid-based, Block Kit)
 disabled = 0
 
@@ -586,7 +586,7 @@ search = index=fw subtype=logdev devname=".self" logid=220001 level IN ("warning
 # Saves to summary_fw index for dashboard performance
 #############################################
 
-[009.[alert]FortiGate_Production_Event_Summary]
+[009.[alert]FortiGate_Event_Summary]
 description = Hourly production event summary (all categories from 123.csv)
 disabled = 0
 
@@ -634,7 +634,7 @@ search = index=fw \
 # Real-time monitoring (every minute)
 #############################################
 
-[010.[alert]FortiGate_Metrics_Anomaly_Production]
+[010.[alert]FortiGate_Metrics_Anomaly]
 description = System metrics anomaly - 2x higher than baseline (CPU/Memory/Traffic/Sessions)
 disabled = 0
 
