--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -38,7 +38,7 @@
 # Real-time monitoring with 30s deduplication
 #############################################
 
-[001.[alert]FortiGate_Config_Change]
+[001.alert_FortiGate_Config_Change]
 description = Real-time FortiGate configuration change alerts (logid-based, Block Kit)
 disabled = 0
 
@@ -64,7 +64,7 @@ relation = greater than
 # Uniqueness determined by: timestamp + device + admin user + config path changed
 alert.suppress = 1
 alert.suppress.fields = _time, device, user, cfgpath
-alert.suppress.period = 5m  # ⚙️ CHANGEME: Adjust suppression window (e.g., 1m, 5m, 1h)
+alert.suppress.period = 5m
 
 # Action settings
 action.keyindicator.invert = 0
@@ -77,13 +77,13 @@ action.risk.forceCsvResults = 1
 action.risk.param.verbose = 0
 action.send2uba.param.verbose = 0
 action.slack = 1
-action.slack.param.channel = #security-firewall-alert  # ⚙️ CHANGEME: Your Slack channel (must invite bot first)
-action.slack.param.message = $result.blockkit_json$  # Uses Block Kit JSON format (rich formatting)
+action.slack.param.channel = #security-firewall-alert
+action.slack.param.message = $result.blockkit_json$
 action.threat_add.param.verbose = 0
 action.webhook.enable_allowlist = 0
 
 # 🔍 Search Query (logid-based filtering only)
-# ⚙️ INDEX: "fw" - CHANGEME if using different index name
+# INDEX: "fw" - change if using different index name
 # Each config change triggers immediate alert (no deduplication in query)
 search = index=fw type=event subtype=system \
     (logid=0100044546 OR logid=0100044547) \
@@ -140,9 +140,9 @@ search = index=fw type=event subtype=system \
 # Real-time monitoring (every minute)
 #############################################
 
-[002.[alert]FortiGate_System_Critical]
+[002.alert_FortiGate_System_Critical]
 description = Real-time FortiGate system critical events (logid-based, Block Kit)
-disabled = 0
+disabled = 1
 
 # Real-time settings (EVERY MINUTE - no delay!)
 cron_schedule = * * * * *
@@ -163,7 +163,7 @@ relation = greater than
 # 🔕 Duplicate Suppression (1 hour per device+logid)
 alert.suppress = 1
 alert.suppress.fields = devname, logid
-alert.suppress.period = 1h  # ⚙️ CHANGEME: Adjust for critical event frequency
+alert.suppress.period = 1h
 
 # Action settings
 action.keyindicator.invert = 0
@@ -176,7 +176,7 @@ action.risk.forceCsvResults = 1
 action.risk.param.verbose = 0
 action.send2uba.param.verbose = 0
 action.slack = 1
-action.slack.param.channel = #security-firewall-alert  # ⚙️ CHANGEME
+action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = $result.blockkit_json$
 action.threat_add.param.verbose = 0
 action.webhook.enable_allowlist = 0
@@ -220,9 +220,9 @@ search = index=fw type=event subtype=system \
 # Real-time monitoring (every minute)
 #############################################
 
-[003.[alert]FortiGate_Traffic_Anomaly]
+[003.alert_FortiGate_Traffic_Anomaly]
 description = Traffic anomaly detection based on production LogIDs (logid-based, Block Kit)
-disabled = 0
+disabled = 1
 
 # Real-time settings (EVERY MINUTE)
 cron_schedule = * * * * *
@@ -243,7 +243,7 @@ relation = greater than
 # 🔕 Duplicate Suppression (30 minutes per source IP + device)
 alert.suppress = 1
 alert.suppress.fields = srcip, devname
-alert.suppress.period = 30m  # ⚙️ CHANGEME
+alert.suppress.period = 30m
 
 # Action settings
 action.keyindicator.invert = 0
@@ -256,7 +256,7 @@ action.risk.forceCsvResults = 1
 action.risk.param.verbose = 0
 action.send2uba.param.verbose = 0
 action.slack = 1
-action.slack.param.channel = #security-firewall-alert  # ⚙️ CHANGEME
+action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = $result.blockkit_json$
 action.threat_add.param.verbose = 0
 action.webhook.enable_allowlist = 0
@@ -304,7 +304,7 @@ search = index=fw type=traffic \
 # Real-time monitoring (every minute)
 #############################################
 
-[004.[alert]FortiGate_VPN_Failure]
+[004.alert_FortiGate_VPN_Failure]
 description = Real-time VPN connection failures and auth errors (logid-based, Block Kit)
 disabled = 0
 
@@ -327,7 +327,7 @@ relation = greater than
 # 🔕 Duplicate Suppression (30 minutes per user + remote IP)
 alert.suppress = 1
 alert.suppress.fields = user, remip
-alert.suppress.period = 30m  # ⚙️ CHANGEME
+alert.suppress.period = 30m
 
 # Action settings
 action.keyindicator.invert = 0
@@ -340,7 +340,7 @@ action.risk.forceCsvResults = 1
 action.risk.param.verbose = 0
 action.send2uba.param.verbose = 0
 action.slack = 1
-action.slack.param.channel = #security-firewall-alert  # ⚙️ CHANGEME
+action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = $result.blockkit_json$
 action.threat_add.param.verbose = 0
 action.webhook.enable_allowlist = 0
@@ -390,7 +390,7 @@ search = index=fw type=event subtype=vpn \
 # Device ".self" indicates FortiAnalyzer's own events
 #############################################
 
-[005.[alert]FortiAnalyzer_Device_Login_Failure]
+[005.alert_FortiAnalyzer_Device_Login_Failure]
 description = FortiAnalyzer device login failures (DISABLED - not critical)
 disabled = 1
 
@@ -427,7 +427,7 @@ search = index=fw subtype=fazsys devname=".self" \
 # Daily summary at 9 AM KST
 #############################################
 
-[006.[alert]FortiGate_Security_Rating_Low]
+[006.alert_FortiGate_Security_Rating_Low]
 description = FortiGate security rating summary (daily, no alerts)
 disabled = 0
 
@@ -469,7 +469,7 @@ search = index=fw subtype=security-rating \
 # Informational only, no Slack alerts
 #############################################
 
-[007.[alert]FortiGate_User_Activity]
+[007.alert_FortiGate_User_Activity]
 description = User activity monitoring (logid-based, summary only)
 disabled = 1  # ❌ DISABLED: User activity not critical
 
@@ -506,7 +506,7 @@ search = index=fw subtype=user logid=0102038012 \
 # Real-time monitoring (every minute)
 #############################################
 
-[008.[alert]FortiAnalyzer_LogDev_Warning]
+[008.alert_FortiAnalyzer_LogDev_Warning]
 description = FortiAnalyzer log device warnings (logid-based, Block Kit)
 disabled = 0
 
@@ -529,7 +529,7 @@ relation = greater than
 # 🔕 Duplicate Suppression (12 hours per logid)
 alert.suppress = 1
 alert.suppress.fields = logid
-alert.suppress.period = 12h  # ⚙️ CHANGEME: LogDev warnings are persistent issues, 1-2 alerts per day sufficient
+alert.suppress.period = 12h
 
 # Action settings
 action.keyindicator.invert = 0
@@ -542,7 +542,7 @@ action.risk.forceCsvResults = 1
 action.risk.param.verbose = 0
 action.send2uba.param.verbose = 0
 action.slack = 1
-action.slack.param.channel = #security-firewall-alert  # ⚙️ CHANGEME
+action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = $result.blockkit_json$
 action.threat_add.param.verbose = 0
 action.webhook.enable_allowlist = 0
@@ -586,7 +586,7 @@ search = index=fw subtype=logdev devname=".self" logid=220001 level IN ("warning
 # Saves to summary_fw index for dashboard performance
 #############################################
 
-[009.[alert]FortiGate_Event_Summary]
+[009.alert_FortiGate_Event_Summary]
 description = Hourly production event summary (all categories from 123.csv)
 disabled = 0
 
@@ -634,7 +634,7 @@ search = index=fw \
 # Real-time monitoring (every minute)
 #############################################
 
-[010.[alert]FortiGate_Metrics_Anomaly]
+[010.alert_FortiGate_Metrics_Anomaly]
 description = System metrics anomaly - 2x higher than baseline (CPU/Memory/Traffic/Sessions)
 disabled = 0
 
