fix: Revert to Block Kit JSON format, disable Security Rating alert, add LogID tracking

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -14,13 +14,8 @@ alert.suppress.fields = _time, device, user, cfgpath
 alert.suppress.period = 5m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = > *🔧 Config Change Alert*
-> *Device:* $result.device$
-> *Admin:* $result.admin$
-> *Path:* $result.config_path$
-> *Method:* $result.access_method$
-> *Time:* $result._time$
-search = index=fw type=event subtype=system (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid="0100044546", "CLI", logid="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
+action.slack.param.attachment = {"color":"warning","blocks":[{"type":"header","text":{"type":"plain_text","text":"🔧 Config Change Alert"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Device:*\n$result.device$"},{"type":"mrkdwn","text":"*Admin:*\n$result.admin$"},{"type":"mrkdwn","text":"*Path:*\n$result.config_path$"},{"type":"mrkdwn","text":"*Method:*\n$result.access_method$"}]},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$"}]}]}
+search = index=fw type=event subtype=system (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
 
 [002.alert_FortiGate_System_Critical]
 description = System critical events
@@ -45,14 +40,8 @@ alert.suppress.fields = user, remip
 alert.suppress.period = 30m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = > *🔒 VPN Failure Alert*
-> *Device:* $result.device$
-> *User:* $result.vpn_user$
-> *Remote IP:* $result.remote_ip$
-> *Status:* $result.vpn_status$
-> *Reason:* $result.vpn_reason$
-> *Time:* $result._time$
-search = index=fw type=event subtype=vpn (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid="0101037131", "Auth Failed", logid="0101037124", "Tunnel Down", logid="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | dedup device, vpn_user, remote_ip | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
+action.slack.param.attachment = {"color":"danger","blocks":[{"type":"header","text":{"type":"plain_text","text":"🔒 VPN Failure Alert"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Device:*\n$result.device$"},{"type":"mrkdwn","text":"*User:*\n$result.vpn_user$"},{"type":"mrkdwn","text":"*Remote IP:*\n$result.remote_ip$"},{"type":"mrkdwn","text":"*Status:*\n$result.vpn_status$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*Reason:* $result.vpn_reason$"}},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$"}]}]}
+search = index=fw type=event subtype=vpn (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | dedup device, vpn_user, remote_ip | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
 
 [005.alert_FortiAnalyzer_Device_Login_Failure]
 description = FortiAnalyzer device login failures
@@ -60,7 +49,7 @@ disabled = 1
 
 [006.alert_FortiGate_Security_Rating_Low]
 description = Security rating summary
-disabled = 0
+disabled = 1
 cron_schedule = 0 9 * * *
 dispatch.earliest_time = -24h
 dispatch.latest_time = now
@@ -90,11 +79,7 @@ alert.suppress.fields = logid
 alert.suppress.period = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = > *📡 FortiAnalyzer LogDev Warning*
-> *Issue:* $result.issue_type$
-> *Level:* $result.severity_level$
-> *Message:* $result.description$
-> *Time:* $result._time$
+action.slack.param.attachment = {"color":"#ff9900","blocks":[{"type":"header","text":{"type":"plain_text","text":"📡 FortiAnalyzer LogDev Warning"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Issue:*\n$result.issue_type$"},{"type":"mrkdwn","text":"*Level:*\n$result.severity_level$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*Message:* $result.description$"}},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$ | LogID: $result.logid$"}]}]}
 search = index=fw subtype=logdev devname=".self" logid=220001 level IN ("warning","error","critical") | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | dedup logid, issue_type | table _time, logid, severity_level, issue_type, description
 
 [009.alert_FortiGate_Event_Summary]
@@ -126,10 +111,5 @@ alert.suppress.fields = devname
 alert.suppress.period = 30m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = > *🔥 Metrics Anomaly Alert*
-> *Device:* $result.device$
-> *Anomalies:* $result.anomaly_types$
-> *Severity:* $result.severity$
-> *Details:* $result.details$
-> *Time:* $result._time$
+action.slack.param.attachment = {"color":"danger","blocks":[{"type":"header","text":{"type":"plain_text","text":"🔥 Metrics Anomaly Alert"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Device:*\n$result.device$"},{"type":"mrkdwn","text":"*Severity:*\n$result.severity$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*Anomalies:* $result.anomaly_types$\n*Details:* $result.details$"}},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$"}]}]}
 search = index=fw earliest=-1m latest=now | eval device = coalesce(devname, "unknown") | eval cpu_current = coalesce(cpu, 0) | eval mem_current = coalesce(mem, 0) | stats values(cpu_current) as cpu_current, values(mem_current) as mem_current by device | eval anomaly_types = "CPU/Memory" | eval severity = "HIGH" | eval details = "Check system load" | table device, anomaly_types, severity, details
